# QT_CPP_Workspace

./: .gitignore  README.md
ADS_Architeture_Practice/: CMakeLists.txt  full_project_code.txt  script.py
ADS_Architeture_Practice/src/: appdockmanager.cpp  appdockmanager.h  main.cpp  mainwindow.cpp  mainwindow.h
ADS_Architeture_registery_logging/: CMakeLists.txt  full_project_code.txt  resource.qrc
ADS_Architeture_registery_logging/src/: dockwidgetfactory.cpp  dockwidgetfactory.h  logger.h  logviewerwidget.cpp  logviewerwidget.h  mainwindow.cpp
ADS_Architeture_registery_logging_CAN/: CAN_ARCHITECTURE.md  CAN_CODE_REFERENCE.md  CAN_IMPLEMENTATION_GUIDE.md  CAN_INTEGRATION_SUMMARY.md  CAN_QUICK_REFERENCE.md  CMakeLists.txt  README.md
ADS_Architeture_registery_logging_CAN/src/: appdockmanager.cpp  appdockmanager.h  caninterface.h  canmanager.cpp  canmanager.h  cansimulationinterface.cpp  cansimulationinterface.h  cantracewindow.cpp  cantracewindow.h  canvectorxlinterface.cpp  canvectorxlinterface.h  dbcparser.cpp  dbcparser.h  logger.cpp  mainwindow.cpp  mainwindow.h
CMake_Template/CMake_Build_System_Notes/: CMake.docx  improvements.txt
CMake_Template/ProfessionalTemplate/: .clang-format  .cmake-format.yaml  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Run_Build.bat  run_build.sh
CMake_Template/ProfessionalTemplate/.github/workflows/: ci.yml
CMake_Template/ProfessionalTemplate/cmake/: AutoVersion.cmake  CodeFormatTargets.cmake  CompilerWarnings.cmake  Coverage.cmake  Deployment.cmake  EnvConfig.cmake  FetchDependencies.cmake  PackageManager.cmake  Sanitizers.cmake  SuperBuild.cmake
CMake_Template/ProfessionalTemplate/scripts/: SignInstaller.ps1
CMake_Template/ProfessionalTemplate/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
CMake_Template/ProfessionalTemplate/tests/: CMakeLists.txt
QtADS/: CMakeLists.txt
QtADS/Docs/: Review.docx
QtADS/cmake/: FetchDependencies.cmake
QtADS/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PanelRegistry.cpp  PanelRegistry.h  main.cpp
QtADS/src/DockManager/include/: DockToolBar.h
QtADS/src/DockManager/src/: DockMainWindow.cpp  DockToolBar.cpp
QtADS/src/panels/: SamplePanels.cpp
QtADS/tests/: tst_gtest_main.cpp
QtADS_Demo/: CMakeLists.txt  MainWindow.cpp  main.cpp
QtADS_Demo/qtads/: READme.md
QtADS_Template/Docs/: Improvements_Strengths_weaknes
ui_design_QtADS_Template/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ui_design_QtADS_Template/lib/ide_shell/: CMakeLists.txt  README.md
ui_design_QtADS_Template/lib/ide_shell/include/IdeShell/: IdeShellWindow.h
ui_design_QtADS_Template/lib/ide_shell/src/: IdeShellWindow.cpp
ui_design_Template/: mainwindow.h
